--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.screen-output {
+  width: 500px;
+  box-sizing: border-box;
+  padding: 8px 12px;
+  max-height: 120px;
+  overflow: auto;
+}
